# clippercard

./: .gitignore  CHANGES.txt  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  justfile  noxfile.py  pyproject.toml  requirements.txt  setup.py
clippercard/: __init__.py  client.py  clippercard.py  main.py  parser.py  porcelain.py  test_cli.py
docs/: clippercard.html
tests/: test_dashboard_parser.py  test_login.py  test_main.py  test_parsing.py  test_porcelain.py
tests/data/: account.html  dashboard.html  dashboard_user_2.html  login.html  profile.html
